--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.9.0",
+    "@tensorflow/tfjs-backend-wasm": "^3.9.0",
+    "@tensorflow/tfjs-core": "^3.9.0",
+    "@tensorflow/tfjs-node-gpu": "^3.9.0",
     "vue": "^3.2.16"
   },
   "devDependencies": {
