--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tensorflow/tfjs-node-gpu": "^3.9.0",
     "@vladmandic/human": "^2.3.3",
     "@vueuse/core": "^6.6.1",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
