--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tensorflow/tfjs-backend-wasm": "^3.9.0",
     "@tensorflow/tfjs-core": "^3.9.0",
     "@tensorflow/tfjs-node-gpu": "^3.9.0",
+    "@tidyjs/tidy": "^2.4.4",
     "@vladmandic/human": "^2.3.3",
     "@vueuse/core": "^6.6.1",
     "vue": "^3.2.16",
